feat(global): feature global
FileDataMapping: 모델 변경으로 인한 수정